[package]
name = "atlas-net"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A layered Rust networking foundation with cache, auth, dns, cdn and resumable transfer policies."

[features]
default = ["reqwest-transport"]
reqwest-transport = ["dep:reqwest"]

[dependencies]
reqwest = { version = "=0.11.27", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }
url = "=2.4.1"
indexmap = "=2.2.6"
